--- a/style.css
+++ b/style.css
@@ -5,18 +5,20 @@ body {
 
 h1 {
     font-size: 50px;
+   
 }
 
 .orange-color {
     color: orange;
 }
-section{
+.flexible-container{
     display: flex;
     margin-bottom: 120px;
 }
 .half-width{
     width: 50%;
     padding-left: 5%;
+    
 }
 .half-width img{
     width: 90%;
@@ -36,6 +38,31 @@ section{
         background-image: url(dream-bg.png);
         background-repeat: no-repeat;
         background-position: right;
-        text-align: justify;
-        padding-right: 5%;
+        text-align: left;
+        
+    }
+    .experience-area h1{
+        padding-left: 5%;
+    }
+    .experience-area{
+        background-image: url(exp-bg.png);
+        background-repeat: no-repeat;
+        background-position: left;
+    }
+    .experience-item{
+        width: 40%;
+        margin-left: 5%;
+        margin-right: 5%;
+        padding-left: 20px;
+        border-radius: 8px;
+        box-shadow: 10px 10px 10px #808080;
+    }
+    #full-stack-developer{
+        border-left: 7px solid tomato;
+    }
+    #baby-web-developer{
+        border-left: 7px solid blue;
+    }
+    footer{
+        text-align: center;
     }
